add specific week endpoint
