# src/api/components/game/game.routes.js
@@ -3,6 +3,7 @@ const gameRoutes = express.Router()
 const gameController = require('./game.controller')
 
 gameRoutes.get('/season/:season/week/:week', gameController.findGames)
+gameRoutes.get('/week/:week', gameController.findGamesByWeek)
 gameRoutes.get('/scores/season/:season/week/:week', gameController.playGames)
 
 module.exports = gameRoutes
